--- a/Counter_project/index.html
+++ b/Counter_project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
+        <title>Counter +-1</title>
         <style>
         body {
           background-color: lightblue;
@@ -15,7 +15,6 @@
         .container {
            height: 250px; 
            position: relative;
-           border: 3px solid green; 
         }
 
         .center {
@@ -56,8 +55,8 @@
     <div class="container">
       <div class="center">
         <div class="counter-number" id="counter"> 0 </div>
-            <button class="count-btns" id="increment"> Increment </button>
-            <button class="count-btns" id="decrement"> Decrement </button>
+            <button class="count-btns" id="plus" onclick="plus()"> Plus </button>
+            <button class="count-btns" id="minus" onclick="minus()"> Minus </button>
               </div>
             </div>    
       <script type="text/javascript" src="index.js.js"></script>
